make docker images much smaller

--- a/function-manager/Dockerfile
+++ b/function-manager/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.25.1
+FROM golang:1.25.1 as base
 
 WORKDIR /app
 
@@ -10,4 +10,8 @@ COPY *.go ./
 
 RUN CGO_ENABLED=0 GOOS=linux go build -o /function-manager
 
-CMD ["/function-manager"]
+
+from scratch as app
+COPY --from=base /function-manager /function-manager
+
+ENTRYPOINT ["/function-manager"]
