--- a/test-function/Dockerfile
+++ b/test-function/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.25.1
+FROM golang:1.25.1 as base
 
 WORKDIR /app
 
@@ -10,4 +10,8 @@ COPY *.go ./
 
 RUN CGO_ENABLED=0 GOOS=linux go build -o /test-function
 
-CMD ["/test-function"]
+
+from scratch as app
+COPY --from=base /test-function /test-function
+
+ENTRYPOINT ["/test-function"]
