--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,6 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
-          files: gateway
+          files: gateway/gateway
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
