--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,13 @@
 name: Release
 
-on: [push, workflow_dispatch]
+on:
+  push:
+    tags:
+      - "v*"
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -17,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: go get .
       - name: Build
-        run: go build -o gateway -v ./...
+        run: go build . -o gateway
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
